--- a/Review.html
+++ b/Review.html
@@ -5,11 +5,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <link rel="stylesheet" href="Style.css">
+     <img src="movieslogo.png" usemap="#image_map">
+            <map name="image_map">
+            <area alt="Hong" title="Hong" href="https://mubi.com/cast/hong-sang-soo" coords="-4,-14,135,80" shape="rect">
+            </map> 
 </head>
 <body>
 <div id="wrapper">
 <header>
-<h1>Welcome to SangSoo Hong World</h1>
+<h1>Welcome to SangSoo Hong World</h1>  
 </header>
 <nav>
   <ul>
