--- a/Home.html
+++ b/Home.html
@@ -5,14 +5,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <link rel="stylesheet" href="Style.css">
+    <img src="movieslogo.png" usemap="#image_map">
+            <map name="image_map">
+            <area alt="Hong" title="Hong" href="https://mubi.com/cast/hong-sang-soo" coords="-4,-14,135,80" shape="rect">
+            </map> 
 </head>
 <body>
 <div id="wrapper">
 <header>
-<h1>Welcome to SangSoo Hong World</h1>
+    <h1>Welcome to SangSoo Hong World </h1>   
 </header>
-<nav>
-    
+<nav>    
   <ul>
     <li><a href="Home.html">Home</a></li>
     <li><a href="Filmography.html">Filmography</a></li>
@@ -23,7 +26,7 @@
 <main>
 <div id="hongphoto"></div>
 <h2>Who is SangSoo Hong?</h2>
-<ul>Hong Sang Soo is born in Seoul, South Korea and 59 years old. Hong Sang Soo&rsquo;s parents owned the film production company Cinetel Soul. Hong took the entrance exam and entered the theater department at ChungAng University in South Korea. He then studied in the United States where he received his bachelor&rsquo;s degree from the California College of Arts and Crafts and his master&rsquo;s at the School of the Art Institute of Chicago.</ul>
+    <ul>Hong Sang Soo is born in Seoul, South Korea and 59 years old. Hong Sang Soo&rsquo;s parents owned the film production company Cinetel Soul. Hong took the entrance exam and entered the theater department at ChungAng University <!--Absolute Link - link to a different website. --> <a href="https://neweng.cau.ac.kr/index.do">ChungAng University</a> in South Korea. He then studied in the United States where he received his bachelor&rsquo;s degree from the California College of Arts and Crafts and his master&rsquo;s at the School of the Art Institute of Chicago.</ul>
 <h3>Film Style:</h3>
 <ul>
   There are certain elements that are commonly found in Hong&rsquo;s films. A typical Hong film highlights a theme of domestic realism with many of the scenes set on residential streets, cafes, hotels, schools, and in the stairwells of apartment buildings. Characters in the film are seen walking around the city, drinking soju, and having sex. The main characters in his films are often movie directors or actors, and scenes typically consist of a single shot, often beginning and ending with a camera zoom. The budgets for his movies average about $100,000.
